--- a/TOC.ini
+++ b/TOC.ini
@@ -1,16 +1,16 @@
 -: home
--: xxx1
--: xxxx2
--: xxxxx3
+-: xxx
+-: xxxx
+-: xxxxx
 
 [home]
 -: README
 
-[xxx1]
+[xxx]
 -: README
 
-[xxxx2]
+[xxxx]
 -: README
 
-[xxxxx3]
+[xxxxx]
 -: README
